--- a/resources/scss/partials/_variables.scss
+++ b/resources/scss/partials/_variables.scss
@@ -1,1 +1,6 @@
-$text-color: red;
+$dark: #1C1C1C;
+$text-hover: #0282F9;
+$light: white;
+$text-gray: gray;
+$bg-bottom-footer: #303030; 
+$bg-main: #1C1C1C;
