--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -34,3 +34,70 @@ header {
         }
     }
 }
+main {
+    background-color: $dark;
+    .jumbotron {
+        background-image: url('/resources/img/jumbotron.jpg');
+        height: 400px;
+        background-size: cover;
+    }
+    h3 {
+        background-color: $text-hover;
+        color: $light;
+        display: inline-block;
+        padding: 10px 20px;
+        text-transform: uppercase;
+        transform: translateY(-50%);
+    }
+}
+
+.row {
+    .image {
+        position: relative;
+        padding: 20px 0;
+        img {
+            width: 100%;
+            height: 300px;
+            transition: opacity 0.3s ease;
+            &:hover {
+                opacity: 0.3;
+                cursor: pointer;
+            }
+        }
+        .price {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: $light;
+            font-weight: 700;
+            font-size: 2rem;
+            display: none;
+        }
+    }
+    h5 {
+        color: $light;
+        text-transform: uppercase;
+        padding: 10px 0;
+    }
+    .text-center {
+        padding: 30px;
+    }
+     a {
+        text-decoration: none;
+        color: $light;
+        text-transform: uppercase;
+        font-weight: 500;
+        font-size: 1.2rem;
+        padding: 10px 100px;
+        background-color: $text-hover;
+    }
+}
+
+@media screen and (max-width: 1400px) {
+    .image {
+        img {
+            height: auto!important;
+        }
+    }
+}
