--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -26,21 +26,24 @@ header {
             text-transform: uppercase;
             font-weight: 500;
             padding-bottom: 63px;
-        }
 
-        a:hover {
-            color: $text-hover;
-            border-bottom: 6px solid $text-hover;
+            &:hover {
+                color: $text-hover;
+                border-bottom: 6px solid $text-hover;
+            }
         }
     }
 }
+
 main {
     background-color: $dark;
+
     .jumbotron {
         background-image: url('/resources/img/jumbotron.jpg');
         height: 400px;
         background-size: cover;
     }
+
     h3 {
         background-color: $text-hover;
         color: $light;
@@ -55,15 +58,18 @@ main {
     .image {
         position: relative;
         padding: 20px 0;
+
         img {
             width: 100%;
             height: 300px;
             transition: opacity 0.3s ease;
+
             &:hover {
                 opacity: 0.3;
                 cursor: pointer;
             }
         }
+
         .price {
             position: absolute;
             top: 50%;
@@ -75,15 +81,18 @@ main {
             display: none;
         }
     }
+
     h5 {
         color: $light;
         text-transform: uppercase;
         padding: 10px 0;
     }
 }
+
 .text-center {
     padding: 30px;
 }
+
 .btn-load-more a {
     text-decoration: none;
     color: $light;
@@ -94,17 +103,10 @@ main {
     background-color: $text-hover;
 }
 
-// @media screen and (max-width: 1400px) {
-//     .image {
-//         img {
-//             height: auto!important;
-//         }
-//     }
-// }
-
-section {
+.section-navbar {
     background-color: $text-hover;
     padding:  20px 0;
+
     ul {
         list-style: none;
         display: flex;
@@ -116,21 +118,23 @@ section {
             display: flex;
             align-items: center;
             padding: 10px;
+
             a {
                 text-decoration: none;
                 transition: transform 0.3s ease;
-                img {
-                    width: 50px;
-                    
-                }
-                
-                div {
-                    text-transform: uppercase;
-                    color: $light;
-                    padding: 0 10px;
-                    transition: transform 0.3s ease;
-                }
             }
+
+            img {
+                width: 50px;
+            }
+
+            div {
+                text-transform: uppercase;
+                color: $light;
+                padding: 0 10px;
+                transition: transform 0.3s ease;
+            }
+
             a:hover {
                 transform: scale(1.5);
             }
@@ -138,9 +142,38 @@ section {
     }
 }
 
-// @media screen and (max-width: 992px) {
-//     img {
-//         display: none;
-//     }
-    
-// }
+.section-link-footer {
+    background-image: url('/resources/img/dc-logo-bg.png'), url('/resources/img/footer-bg.jpg');
+    background-repeat: no-repeat, no-repeat;
+    background-size: 600px, cover;
+    background-position: calc(100% - 250px), center;
+    padding: 60px 0;
+}
+
+.container-link-footer {
+    display: flex;
+    justify-content: start;
+    flex-wrap: wrap;
+    gap: 20px;
+
+    h5 {
+        text-transform: uppercase;
+        color: $light;
+        padding: 10px 0;
+    }
+}
+
+.link-footer {
+    list-style: none;
+    padding: 0;
+
+    a {
+        text-decoration: none;
+        color: $text-gray;
+        font-size: 0.9rem;
+
+        &:hover {
+            color: $light;
+        }
+    }
+}
