ended copy of page in larabel(after cursing)

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -177,3 +177,38 @@ main {
         }
     }
 }
+
+
+.section-bottom-footer {
+    background-color: $bg-bottom-footer;
+    padding: 30px 0;
+    .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 20px;
+
+        a {
+        text-decoration: none;
+        text-transform: uppercase;
+        color: $light;
+        border: 2px solid $text-hover;
+        padding: 10px 20px;
+        }
+
+        span {
+            color: $text-hover;
+            text-transform: uppercase;
+            font-weight: 700;
+            padding: 0 20px;
+        }
+        img {
+            padding: 0 10px;
+            transition: transform 0.3s ease;
+        }
+        img:hover {
+            transform: scale(1.5);
+        }
+    }
+    
+}
